# cargo_emmissions-tracker

./: .env  .env.sample  .gitignore  README.md  app.py  compose.yml  entity.py  pyproject.toml  requirements.txt  vercel.json
models/: route_model.py  user_model.py
modules/: emission_calculator.py  entity.py  jwt_util.py  logger.py  mongo_core.py  route_calculator.py  utils.py
public/: app.js  index.html
routers/: __init__.py  auth_router.py  route_router.py  search_history_router.py  user_router.py
static/: app.js  index.html
