[project]
name = "cargo-emmissions-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.9",
    "pyjwt>=2.8.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "uuid>=1.30",
    "uvicorn>=0.30.0",
    "fastapi[standard]>=0.131.0",
]
